Updated file upload

--- a/views/menuUpload.html
+++ b/views/menuUpload.html
@@ -8,5 +8,6 @@
 		<input type="file" name="menu" id="menu">
 		<input type="submit" value="Upload Menu" name="submit" accept=".docx,.json">
 	</form>
+	<a href="/menu/current">View Current Menu</a>
 </body>
 </html>
